	-Fixed bug where THE MAZE AWAITS would interrupt the last message of every battle it occurred in
8/4/23
	-Player, exit, and campfire are now placed in the maze whenever it is generated
	-Implemented random encounter generation
		-Seems to work well enough, as long as the all the rules about encounter tables are respected
8/5/23
	-hasAction is now set correctly when entering a battle

TODO:
	-Sleep spell should be low probability against legendary resistance
	-Revisit POISON & SMITE spell messages
	-Swap out THE MAZE AWAITS for INTO THE CASTLE/CRYPT/ABYSS
	-Make enemies flash between their own colors and the color of the damage type when damaged
		-Fire : orange
		-Ice : light blue
		-Electric : yellow
		-Holy : white
		-Poison : green
		-Physical : gray
		-Non-elemental : black
	-Improve in-maze campfire graphics to look less squished when they appear

	REQUIRES LOGIC:
		-Write enemy AI handling
		-Write sound effect routines
		-Add load a visual effect routine
		-Setup screen logo?? Would be nice if space allows
			-Can change message to FORM A TEAM in order to reduce text size

	DOESN'T REQUIRE LOGIC:
		-Add more text & messages
		-Create all enemy graphics
		-Create all enemy AI tables
		-Create all encounter tables
		-Tune maze exit tables
		-Create all visual effects
			-Make effect visualizer?
		-Create all sound effects
			-Make sound effect tracker?

	Requirements for functional game loop:
		-Functional combat - 85%
			-Control Flow/Battler Selection - 100%
			-Fighting - 100%
			-Spellcasting - 100%
			-Moving - 100%
			-Running - 100%
			-Functional status effects - 100%
			-Enemy AI - 20%
				-Special moves - ??%
					-Summon
					-Summon & destruct self
					-Explode
					-Fake spell?
			-Character advancement - 100%
			-Mana implementation - 100%
		-Additional maze logic
			-Moving between floors - 100%
			-Encounter generation - 100%
				-Bosses - 100%
			-Campfires - 100%
		-Transitioning between maze and battles - 100%
